apps/gitlab/gitlab/postgres/networkpolicies/postgres-initdb.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/cilium.io/ciliumnetworkpolicy_v2.json
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: cnpg-postgres-initdb
  namespace: gitlab
spec:
  endpointSelector:
    matchLabels:
      cnpg.io/jobRole: initdb
  egress:
    - toEndpoints:
        - matchLabels:
            k8s-app: kube-dns
            io.kubernetes.pod.namespace: kube-system
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
          rules:
            dns:
              - matchPattern: "*"
    - toEntities:
        - host
      toPorts:
        - ports:
            - port: "6443" # kube-api
              protocol: TCP
  ingress:
    - fromEndpoints:
        - matchLabels:
            app.kubernetes.io/name: cloudnative-pg
            app.kubernetes.io/instance: cloudnative-pg
            "k8s:io.kubernetes.pod.namespace": cnpg-system
      toPorts:
        - ports:
            - port: "8080"
              protocol: TCP
# vi: ft=yaml
