apps/gitlab/gitlab/postgres/networkpolicies/postgres.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/cilium.io/ciliumnetworkpolicy_v2.json
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: cnpg-postgres
  namespace: gitlab
spec:
  endpointSelector:
    matchLabels:
      cnpg.io/cluster: gitlab-psql
      cnpg.io/podRole: instance
  egress:
    - toEndpoints:
        - matchLabels:
            k8s-app: kube-dns
            io.kubernetes.pod.namespace: kube-system
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
          rules:
            dns:
              - matchPattern: "*"
    - toEntities:
        - host
      toPorts:
        - ports:
            - port: "6443" # kube-api
    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/name: minio
            app.kubernetes.io/instance: minio
            io.kubernetes.pod.namespace: minio
      toPorts:
        - ports:
            - port: "9000"
              protocol: TCP
    - toEndpoints:
        - matchLabels:
            app: sidekiq
            release: gitlab
            "k8s:io.kubernetes.pod.namespace": gitlab
      toPorts:
        - ports:
            - port: "34358"
              protocol: TCP
            - port: "43720"
              protocol: TCP
            - port: "56404"
              protocol: TCP
  ingress:
    - fromEndpoints:
        - matchLabels:
            app.kubernetes.io/name: prometheus
            app.kubernetes.io/instance: kube-prometheus-stack-prometheus
            "k8s:io.kubernetes.pod.namespace": monitoring
      toPorts:
        - ports:
            - port: "9187"
              protocol: TCP
    - fromEndpoints:
        - matchLabels:
            app.kubernetes.io/name: cloudnative-pg
            app.kubernetes.io/instance: cloudnative-pg
            "k8s:io.kubernetes.pod.namespace": cnpg-system
      toPorts:
        - ports:
            - port: "8000"
              protocol: TCP
    - fromEndpoints:
        - matchLabels:
            app: gitlab
            component: gitlab
            "k8s:io.kubernetes.pod.namespace": gitlab
      toPorts:
        - ports:
            - port: "5432"
              protocol: TCP
    - fromEndpoints:
        - matchLabels:
            cnpg.io/cluster: gitlab-psql
            cnpg.io/jobRole: import
            "k8s:io.kubernetes.pod.namespace": gitlab
        - matchLabels:
            app: webservice
            release: gitlab
            "k8s:io.kubernetes.pod.namespace": gitlab
        - matchLabels:
            app: sidekiq
            release: gitlab
            "k8s:io.kubernetes.pod.namespace": gitlab
        - matchLabels:
            app: toolbox
            release: gitlab
            "k8s:io.kubernetes.pod.namespace": gitlab
        - matchLabels:
            app: migrations
            release: gitlab
            "k8s:io.kubernetes.pod.namespace": gitlab
        - matchLabels:
            app: gitlab
            job-name: gitlab-gitlab-upgrade-check
            release: gitlab
            "k8s:io.kubernetes.pod.namespace": gitlab
        # when joining, we need to allow the joining pod to connect to the instance
        # - matchLabels:
        #     cnpg.io/cluster: gitlab-psql
        #     cnpg.io/jobRole: join
        #     "k8s:io.kubernetes.pod.namespace": gitlab
        # allow the instance to connect to itself
        # - matchLabels:
        #     cnpg.io/cluster: gitlab-psql
        #     cnpg.io/podRole: instance
        #     "k8s:io.kubernetes.pod.namespace": gitlab
      toPorts:
        - ports:
            - port: "5432"
              protocol: TCP
